Fixed scene area selection on Firefox.

--- a/modules/gui/frontend/src/app/home/body/process/mosaic/sceneSelection.module.css
+++ b/modules/gui/frontend/src/app/home/body/process/mosaic/sceneSelection.module.css
@@ -19,6 +19,7 @@
 .scenes {
     display: flex;
     flex-direction: row;
+    overflow: hidden;
 }
 
 .availableScenes {
